fixed center align issues with h2 tag, overring css removed and replaced with class on full services page

--- a/my-portfolio/src/Components/Column/column.css
+++ b/my-portfolio/src/Components/Column/column.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     vertical-align: top;
+    text-align: center;
 }
 
 @media (min-width: 900px) {
