--- a/my-portfolio/src/Components/ServicePages/fullservices.css
+++ b/my-portfolio/src/Components/ServicePages/fullservices.css
@@ -1,6 +1,6 @@
-h2{
+.serviceHeadings{
     margin-left: 15vh;
-}
+} 
 .serviceList{
     align-items: center; 
     justify-content: center; 
